<resources>
    <string name="app_name">AlefApp</string>
    <string name="title_login">Inicio de sesión</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="tv_description_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_login_text">Iniciar sesión</string>
    <string name="btn_google_text">Iniciar sesión con Google</string>
    <string name="btn_preview_text">Da un vistazo</string>
    <string name="tv_title_create_account">¿Aun no has registrado?</string>
    <string name="tv_register_text">Registrarme</string>
    <string name="tv_forgot_password_description">Ingresa tu usuario o correo electrónico, en unos momentos te enviaremos un correo con instrucciones para que vuelvas a iniciar sesión</string>
    <string name="btn_send_text">Enviar</string>
    <string name="tv_title_register">Registro</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_conf_password">Confirmar contraseña</string>
    <string name="tv_privacy_description">Al dar clic en Registrarme declaro haber leido y aceptado los Términos y condiciones así como la Politica de Privacidad de ABC123</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Abrir barra de navegaciòn</string>
    <string name="navigation_drawer_close">Cerrar barra de navegaciòn</string>

    <string name="nav_header_desc">Imàgen del perfil</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Novedades</string>
    <string name="menu_postulation">Postulaciones</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_notification">Notificaciones</string>
    <string name="menu_curriculum">Mi curriculum</string>
    <string name="menu_work_with_us">Freelancer</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_details_vacant">Detalles de vacante</string>

    <string name="logout">Cerrar sesión</string>
    <string name="add_img_avatar">Agregar foto de perfil</string>

    <string name="dialog_gallery_camera_title">Seleccione alguna opción</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="dialog_gallery">Galeria</string>
    <string name="dialog_camera">Camara</string>
    <string name="dialog_google_picture">Usar mi imágen de Google</string>
    <string name="dialog_permissions_title">Requerimos permisos</string>
    <string name="dialog_permissions_message">Requerimos permisos para el uso de la camara o la galeria</string>
    <string name="dialog_confirm">Ir a los ajustes</string>

    <string name="helper_required">Requerido</string>
    <string name="helper_optional">Opcional</string>

    <string name="info_personal">Personal</string>
    <string name="info_academic">Academica</string>
    <string name="info_work_experience">Laboral</string>
    <string name="info_references">Referencias</string>

    <string name="user_last_name">Apellido paterno</string>
    <string name="user_mother_last_name">Apellido materno</string>
    <string name="user_name">Nombre(s)</string>
    <string name="user_date">Fecha de nacimiento</string>
    <string name="user_gender">Género</string>
    <string name="user_state">Estado</string>
    <string name="user_town">Municipio</string>
    <string name="user_phone_home">Teléfono (Casa)</string>
    <string name="user_cellphone">Teléfono (Celular)</string>
    <string name="user_address">Dirección</string>
    <string name="user_curp">CURP</string>
    <string name="user_rfc">RFC</string>
    <string name="user_nss">Número de seguro social</string>
    <string name="user_suburb">Fraccionamiento ó colonia</string>
    <string name="user_street">Calle</string>
    <string name="user_number_home">Número (Int. / Ext.)</string>
    <string name="user_postal_code">Código postal</string>
    <string name="last_grade_title">Último grado alcanzado</string>
    <string name="user_level_academic">Nivel académico</string>
    <string name="user_school">Instituto</string>
    <string name="user_academic_advance">Avance académico</string>

    <string name="period_start_title">Periodo de inicio</string>
    <string name="month_text">Mes</string>
    <string name="year_text">Año</string>
    <string name="period_end_title">Periodo de término</string>
    <string name="certificated_title">Título alcanzado</string>
    <string name="user_certificate">Certificado</string>
    <string name="user_title_achieved">Título</string>
    <string name="user_identification_card">Cédula profesional</string>
    <string name="search_job">Ocupación, puesto, area..</string>
    <string name="search_location">Ubicación</string>
    <string name="search_btn">Buscar</string>
    <string name="no_vacancies">Sin vacantes por el momento</string>
    <string name="mark_all_as_read">Marcar todos como visto</string>
    <string name="no_notify">Sin notificaciones</string>
    <string name="title_advance_postulation">Avance de postulación</string>
    <string name="btn_cancel_postulation">Cancelar postulación</string>
    <string name="no_favorites">Sin vacantes favoritas</string>
    <string name="title_change_password">Cambiar contraseña</string>
    <string name="btn_save_changes">Guardar cambios</string>
    <string name="title_notify">Notificaciones</string>
    <string name="title_about_us">Acerca de</string>
    <string name="title_privacy_policies">Aviso legal y Política de privacidad</string>
    <string name="app_version">Versión 1.0.0</string>
    <string name="btn_apply">Postularme</string>
    <string name="text_salary">Sueldo</string>
    <string name="text_description">Descripción</string>
    <string name="title_loading_splash">Cargando..</string>
    <string name="cb_yes">Si</string>
    <string name="cb_no">No</string>
    <string name="text_availability">Disponibilidad</string>
    <string name="text_workDay">Jornada laboral</string>
    <string name="text_mode">Modalidad</string>
    <string name="warn_text_last_academic">Por favor no olvides tener los documentos marcados en \"Si\" a la mano</string>
    <string name="cb_in_process">En proceso</string>
    <string name="user_has_posgraduate">¿Tienes posgrado?</string>
    <string name="user_question_posgraduate">¿Cuántos posgrados tienes?</string>
    <string name="type_posgraduate">Tipo de posgrado</string>
    <string name="menu_login">Iniciar sesión</string>
    <string name="configuracion_item">Configuración</string>

    <string name="filter_zone">Zona</string>
    <string name="filter_mode">Modalidad</string>
    <string name="filter_engagement">Contratación</string>
    <string name="filter_schedule">Jornada laboral</string>
    <string name="filter_salary">Sueldo</string>
    <string name="user_has_work_experience">¿Tienes experiencia laboral?</string>
    <string name="work_text_company">Nombre de la empresa</string>
    <string name="work_text_job">Puesto</string>
    <string name="work_text_workstation">Area o departamento</string>
    <string name="drawer_open">Abrir menù</string>
    <string name="drawer_close">Cerrar menù</string>
    <string name="dialog_loading">Cargando..</string>
</resources>