<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_postulation"
            android:icon="@drawable/ic_menu_postulation"
            android:title="@string/menu_postulation" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_menu_alert_notifications"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_work_with_us"
            android:icon="@drawable/ic_menu_work_with_us"
            android:title="@string/menu_work_with_us" />
    </group>
</menu>